sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.code
def combSort() {
	var ecart = getNombreValeurs;
  var echanges = 0;
  var stop = false
  do{
    if (ecart>1){
      ecart = (ecart.toDouble / 1.3).toInt
    		}
    	var i = 0;
    	do{
      		if(plusPetit(i+ecart,i)){
            	echange(i,i+ecart);
            	echanges=echanges+1}
      		i=+1;
    		}while((i+ecart)<getNombreValeurs)
  	if (echanges==0){stop=true}
  	echanges=0;
  }while(stop==false || ecart>1)
}